Initial commit containing all the modifications.

--- a/PogoLocationFeeder/PogoLocationFeeder.csproj
+++ b/PogoLocationFeeder/PogoLocationFeeder.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Helper\UserAgentHelper.cs" />
     <Compile Include="Helper\VersionCheckState.cs" />
     <Compile Include="Input\InputService.cs" />
+    <Compile Include="PogoBotSniperInfo.cs" />
     <Compile Include="Readers\DiscordWebReader.cs" />
     <Compile Include="Config\Settings.cs" />
     <Compile Include="Helper\MessageParser.cs" />
