--- a/PogoLocationFeeder.GUI/packages.config
+++ b/PogoLocationFeeder.GUI/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Costura.Fody" version="1.3.3.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Flurl" version="2.2.0" targetFramework="net452" />
+  <package id="Flurl.Http" version="1.0.1" targetFramework="net452" />
   <package id="Fody" version="1.29.4" targetFramework="net452" developmentDependency="true" />
   <package id="Google.Protobuf" version="3.0.0-beta4" targetFramework="net452" />
   <package id="log4net" version="2.0.5" targetFramework="net452" />
